--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4.1",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
-        "barryvdh/laravel-ide-helper": "^2.6",
-        "doctrine/dbal": "^2.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.3",
-        "laravel/tinker": "^1.0",
-        "nutnet/laravel-sms": "~0.4",
-        "spatie/laravel-cors": "^1.6",
-        "spatie/laravel-permission": "^2.37",
-        "spatie/laravel-tags": "^2.5",
+        "barryvdh/laravel-ide-helper": "^2.10.0",
+        "doctrine/dbal": "^3.1.0",
+        "fideloper/proxy": "^4.4.1",
+        "laravel/framework": "^8.37",
+        "laravel/passport": "^10.1.3",
+        "laravel/tinker": "^2.6.1",
+        "nutnet/laravel-sms": "^0.10.0",
+        "spatie/laravel-permission": "^4.0.1",
+        "spatie/laravel-tags": "^4.0.2",
+        "symfony/console": "^5.2.x-dev",
         "zelenin/smsru": "^4.1"
     },
     "require-dev": {
@@ -28,9 +28,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.9",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "roave/security-advisories": "dev-master"
+        "nunomaduro/collision": "^5.4.0",
+        "phpunit/phpunit": "^9.5.4"
     },
     "config": {
         "optimize-autoloader": true,
