--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-ide-helper": "^2.10.0",
         "doctrine/dbal": "^3.1.0",
         "fideloper/proxy": "^4.4.1",
+        "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^8.37",
         "laravel/passport": "^10.1.3",
         "laravel/tinker": "^2.6.1",
